Update UseCase Page and fix styling problems in tables so they add overflows and fixed table row sizes

--- a/frontend/components/UseCaseCatalog/UseCaseCatalog.css
+++ b/frontend/components/UseCaseCatalog/UseCaseCatalog.css
@@ -17,9 +17,8 @@
 
   background-color: dodgerblue;
   display: flex;
-  height: 81vh;
+  height: 80vh;
   flex-direction: column;
-  justify-content: space-between;
   border-style: ridge;
   border-width: thick;
   border-color: black;
@@ -41,9 +40,8 @@
     border-style: outset;
     border-width: thick;
     width: 100%;
-    height: 27vh;
+    height: 23vh;
     margin-bottom: 20px;
-    margin-left: 30px;
 }
 
 .catalogBody h2 {
@@ -52,6 +50,7 @@
 
 .useCaseTables {
     display: flex;
+    position: relative;
     flex-direction: row;
     justify-content: left;
     overflow-x: auto;
@@ -59,16 +58,39 @@
 }
 
 .attrTable {
-    background-color: black;
     color: snow;
+    display: table;
     border-style: ridge;
     border-width: thick;
     margin-left: 20px;
     margin-bottom: 20px;
+    height: 15vh;
     width: 25vh;
-    height: 20vh;
-    overflow-y: scroll;
 
+}
+
+.attrTable thead {
+    background-color: darkgrey;
+    border-style: outset;
+    border-color: grey;
+    border-width: thick;
+}
+
+.attrTable tbody {
+    display: block;
+    background-color: black;
+    color: snow;
+    width: 100%;
+    height: 11vh;
+    overflow: auto;
+}
+
+.attrTable tbody tr {
+
+  display: table;
+  width: 100%;
+  height: 4vh;
+  text-align: center;
 }
 
 .noDataIndication {
